GS began editing the document, EM trying new logits

--- a/gesValeriaEric/paper/urge09.tex
+++ b/gesValeriaEric/paper/urge09.tex
@@ -30,9 +30,9 @@
 
 %% TO ADD NOTES IN TEXT
 \usepackage[colorinlistoftodos, textsize=small]{todonotes}
-\newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{EM:} #1}}
-\newcommand{\vp}[1]{\todo[color=green!15, inline]{\textbf{VP:} #1}}
-\newcommand{\gs}[1]{\todo[color=blue!15, inline]{\textbf{GS:} #1}}
+\newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{Eric:} #1}}
+\newcommand{\vp}[1]{\todo[color=green!15, inline]{\textbf{Vale:} #1}}
+\newcommand{\ges}[1]{\todo[color=blue!15, inline]{\textbf{Ges:} #1}}
 
 % agradecimientos
 % Sebastián Soto Velasco, ex-director jurídico de del ministerio secretaría general de la presidencia
@@ -74,17 +74,41 @@
 
 \section{Introduction}
 
-\noindent The prerogative to declare bills urgent gives the president power to interfere, to variable degrees, with congress' voting schedule. Presidents with such power can choose to confront legislators with a deadline to discuss and vote legislation by simply designating it urgent. Seen against the U.S.\ system, where an impatient president has no formal resources to pressure legislators to act on stagnant legislation that s/he would like to see considered, urgency authority may even seem contradictory to classic notions of separation of powers. The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+\noindent The prerogative to declare bills urgent gives the president power to interfere with congress' voting schedule. Presidents with such power can impose legislators with a deadline to discuss and vote legislation by simply designating a bill "urgent". Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that ``The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
+
+\ges{Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
+    The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+    Within this view presidents can veto bilsl, preventing them from becoming law, but cannot force legislators to act onspecific measures.}
 
 % federalist 70
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
+% federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
 
-Yet, with considerable variation, five constitutions of the Americas have such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. The president can declare any executive-initiated bill urgent at any time. In Colombia, urgent bills go to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act within a pre-specified, short period, although the consequences of not doing so vary between the two countries. Failure to do so converts the urgent bill into law in Uruguay, \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.} but not in Chile. In Mexico the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days. In Mexico, as in Chile, how to proceed in case of legislative non-compliance is indeterminate.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
+Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
 \emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check.}
 \vp{WILL LOOK INTO THIS}
+\ges{Little, if any connection.}
 
-Urgency authority has received limited attention. \citet{siavelis.2002} stands out given the systematic nature of his study of the urgency prerogative in Chile. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency qualification, and about nine out of ten bills marked urgent were initiated by the executive. Seeking whether or not proposals marked urgent had a more expedited legislative process and an improved likelihood of passage, the study found mixed evidence at best. Among executive proposals, those marked urgent underwent shorter considerations than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
+In the United States, \citet{howell.moe.Relic2016} argue that in order to have an effective government, the United States need to put the president at the center of the legislative process by giving him urgency powers: ``...constitutional amendment that grants presidents universal `fast track' authority... Presidents would craft policy proposals---which are likely to be far more coherent, well integrated, and effective than anything Congress would design---and Congress would be required to vote up or down on those proposals, within a specified period of time and on a majority-rule basis''. 
+\ges{I don't have the book, do you? this quote is from an editorial in CNN. We should change it}
+
+The key element in these rules is the reversion point when Congress fails to act on an urgent measure: the whole legislative process comes to a halt (as in the case of Brazil and Colombia), the bill becomes a law (as in the case of Uruguay), there is a constitutional violation (under the Howell-Moe proposal for the U.S.). Thus, by institutional design, the president has an effective path to influence the congressional agenda: which bills should be debated and voted on the floor. 
+
+In Chile, however, failure to act on an urgent bill does not carry any kind of trigger effect. The legislative process does not stop, and bills do not become law immediately. There are no formal consequences when legislators do not consider a bill under the period of time specified in the urgency. Indeed, legislators can ignore the president's request for action.  Scholars have speculated that the value of the urgency authority lies in its signaling capacity. Quoting a former legal chief of staff at the Presidency, \citet{berrios.gamboa.fiscChile.2006} describe one month notices as ``merely symbolic, exerting no real pressure on Congress'' (p.117). Likewise, \citet{aleman.navia.UrgChi.2009} see degrees of urgency as ``signals of presidential attention'' (p.~404). The assembly may face political costs by ignoring or rejecting salient proposals.
+
+\emm{Small problem above: we still haven't introduced one month notices or notion of urgency degrees...}
+
+Our argument builds on the existing literature, but takes on a very different position.  In short, we claim that urgency authority is neither a signal nor an agenda setting tool, but instead a mechanism that enhances cooperation between the executive and his party or coalition in Congress. We find that the literature has largely ignored an important consequence of this rule: when bills are labeled urgent, they cannot be modified on the floor. Urgent bills are proposals that come to the floor with a close rule:  legislators have to vote it up or down, with no possibility to introduce amendments.  Therefore, the bill that emerges from committee, is identical to the bill that is enacted. Urgency protects the commitments agreed to in committee as they cannot be undone later on on the floor. 
+
+The interesting element is that the president is the one that decides whether a bill proceeds to the floor with a close rule, or whether it will be open for amendments. This means that, similar to the U.S., where committee members negotiate with the leadership and the Rules Committee to receive close rules towards floor consideration, in the case of Chile committee members negotiate with the president to receive that label.  In Chile, the president takes on the role of the Rules Committee. 
+
+As we will show, we posit that the urgency powers 
+
+This role opens the door for multiple strategies depending on the preferences of the President and committee members. 
+  
+
+What is the effect of the urgency authority? Under which conditions do Presidents use it? Urgency authority has received limited attention. \citet{siavelis.2002} stands out given the systematic nature of his study of the urgency prerogative in Chile. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency qualification, and about nine out of ten bills marked urgent were initiated by the executive. Seeking to understand whether proposals marked urgent had a more expedited legislative process and an improved likelihood of passage, the study found mixed evidence at best. Although among executive proposals, those marked urgent underwent shorter considerations than the rest (medians of 134 vs.\ 160 days, respectively), there were no difference in success rates  (64 vs.\ 63 percent). 
 
 We claim that the poor signal given by bills designated urgent in Chile may bear relation to selection bias. Strategic presidents are likely to target bills that differ from the rest in important ways, so that the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
 
@@ -761,7 +785,7 @@ Given that observations from four Legislaturas with important differences in the
 
 % dv12 controlling for comm chair
 % Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
-% Date and time: Tue, Jul 11, 2017 - 03:17:40 AM
+% Date and time: Wed, Aug 23, 2017 - 09:15:00 AM
 % Requires LaTeX packages: dcolumn 
 \begin{table}%[!htbp]
   \centering 
@@ -772,41 +796,43 @@ Given that observations from four Legislaturas with important differences in the
     \\[-1.8ex] & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
     \\ [-1.8ex] 
     \hline \\[-1.8ex] 
-    \emph{Co-partisan}     &  .193^{**} &  &  &                                        \\
-    \emph{comm.~chair}     & (.046)    &  &  &                                         \\ [.75ex]
-    \emph{Coalition}       &  &  .403^{**} &  .429^{**} &  .414^{**}                   \\
-    \emph{comm.~chair}     &  & (.031)    & (.023)    & (.027)                         \\ [.75ex]
-    \emph{Multiple}        &  .801^{***} &  .829^{***} &  .845^{***} &  .842^{***}     \\
-    \emph{referrals}       & (<.001)    & (<.001)    & (<.001)    & (<.001)            \\ [.75ex] 
-    \emph{Hacienda}        & 1.787^{***} & 1.762^{***} & 1.743^{***} & 1.746^{***}     \\
-    \emph{referral}        & (<.001)   & (<.001)   & (<.001)   & (<.001)               \\ [.75ex]
-    \emph{Member bill}     & -2.906^{***} & -2.935^{***} & -3.040^{***} & -3.022^{***}  \\ 
-                           & (<.001)   & (<.001)   & (<.001)   & (<.001)               \\ [.75ex]
-    \emph{Pres.}           &  -.002 &  -.016 &  .011 &  -.010                          \\
-    \emph{approval}        & (.968)    & (.778)    & (.860)    & (.865)                \\ [.75ex]
-    \emph{Introduced}      &  .303^{***} &  .322^{***} &  .313^{***} &  .318^{***}     \\
-    \emph{in Senate}       & (.006)    & (.004)    & (.005)    & (.004)                \\ [.75ex]
-    \emph{Senate}          &  -.118 &  -.152 &  &                                      \\
-    \emph{majority}        & (.488)    & (.371)    &  &                                \\ [.75ex]
-    \emph{Year}            &  .094^{**} &  .091^{**} &  .083^{*} &  .084^{*}           \\
-    \emph{remaining}       & (.039)    & (.046)    & (.066)    & (.063)                \\ [.75ex]
-    \emph{Relax}           &  .360^{*} &  .318 &  &                                    \\
-    \emph{deadlines}       & (.076)    & (.111)    &  &                                \\ [.75ex]
-    %% \emph{2002-06 Leg.} &  &  &  -.054 &                                            \\
-    %%                     &  &  & (.749)    &                                         \\ [.75ex]
-    %% \emph{2006-10 Leg.} &  &  &  .380^{**} &                                        \\
-    %%                     &  &  & (.014)    &                                         \\ [.75ex]
-    %% \emph{2010-14 Leg.} &  &  &  .713^{***} &                                       \\
-    %%                     &  &  & (<.001)   &                                         \\ [.75ex]
-    Intercept              &  -.864^{***} & -1.117^{***} & -1.435^{***} & -1.159^{***}\\
-                           & (<.001)   & (<.001)   & (<.001)   & (<.001)             \\ [.75ex]
+    \emph{Co-partisan}     &  .184^{*} &  &  &                                        \\
+    \emph{comm.~chair}     &     (.057)&  &  &                                        \\ [.75ex]
+    \emph{Coalition}       &  &  .409^{**} &  .437^{**} &  .422^{**}                  \\
+    \emph{comm.~chair}     &  &     (.028)&     (.020)&     (.025)                    \\ [.75ex]
+    \emph{Multiple}        &  .800^{***} &  .825^{***} &  .842^{***} &  .839^{***}    \\
+    \emph{referrals}       &    (<.001)&    (<.001)&    (<.001)&    (<.001)           \\ [.75ex]
+    \emph{Hacienda}        & 1.799^{***} & 1.773^{***} & 1.753^{***} & 1.757^{***}    \\
+    \emph{referral}        &    (<.001)&    (<.001)&    (<.001)&    (<.001)           \\ [.75ex]
+    \emph{Member bill}     & -2.916^{***} & -2.946^{***} & -3.056^{***} & -3.038^{***}\\ 
+                           &    (<.001)&    (<.001)&    (<.001)&    (<.001)           \\ [.75ex]
+    \emph{Pres.}           &  -.008 &  -.022 &  .008 &  -.012                         \\
+    \emph{approval}        &     (.888)&     (.703)&     (.894)&     (.836)           \\ [.75ex]
+    \emph{Introduced}      &  .312^{***} &  .331^{***} &  .323^{***} &  .327^{***}    \\
+    \emph{in Senate}       &     (.005)&     (.003)&     (.004)&     (.003)           \\ [.75ex]
+    \emph{Senate}          &  -.144 &  -.177 &  &                                     \\
+    \emph{majority}        &     (.400)&     (.296)&  &                               \\ [.75ex]
+    \emph{Year}            &  .088^{*} &  .085^{*} &  .077^{*} &  .078^{*}            \\
+    \emph{remaining}       &     (.057)&     (.068)&     (.094)&     (.089)           \\ [.75ex]
+    \emph{(Year}    &  -.121^{**} &  -.126^{***} &  -.135^{***} &  -.134^{***} \\
+    \emph{remaining)$^2$}  &     (.011)&     (.009)&     (.006)&     (.006)           \\ [.75ex]
+    \emph{Relax}           &  .327 &  .287 &  &                                       \\
+    \emph{deadlines}       &     (.108)&     (.151)&  &                               \\ [.75ex]
+    %% \emph{2002-06 Leg.} &  &  &  -.062 &                                           \\
+    %%                     &  &  &     (.715)&                                        \\ [.75ex]
+    %% \emph{2006-10 Leg.} &  &  &  .388^{**} &                                       \\
+    %%                     &  &  &     (.012)&                                        \\ [.75ex]
+    %% \emph{2010-14 Leg.} &  &  &  .716^{***} &                                      \\
+    %%                     &  &  &     (<.001)&                                       \\ [.75ex]
+    Intercept              &  -.713^{***} &  -.970^{***} & -1.307^{***} & -1.031^{***}\\
+                           &     (<.001) &     (<.001) &    (<.001)  &     (<.001)    \\ [.75ex]
     \hline \\[-1.8ex] 
     Effects & \multicolumn{1}{c}{none} & \multicolumn{1}{c}{none} & \multicolumn{1}{c}{fixed} & \multicolumn{1}{c}{mixed} \\ 
     Observations & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} \\ 
-    Log$L$ & \multicolumn{1}{c}{-1,718} & \multicolumn{1}{c}{-1,718} & \multicolumn{1}{c}{-1,709} & \multicolumn{1}{c}{-1,716} \\ 
-    \% correct & \multicolumn{1}{c}{89} & \multicolumn{1}{c}{89} & \multicolumn{1}{c}{89} & \multicolumn{1}{c}{89} \\ 
-    %% Akaike Inf. Crit. & \multicolumn{1}{c}{3,456.650} & \multicolumn{1}{c}{3,455.668} & \multicolumn{1}{c}{3,440.519} & \multicolumn{1}{c}{3,449.989} \\ 
-    %% Bayesian Inf. Crit. &  &  &  & \multicolumn{1}{c}{3,511.655} \\ 
+    Log$L$ & \multicolumn{1}{c}{-1,715} & \multicolumn{1}{c}{-1,714} & \multicolumn{1}{c}{-1,705} & \multicolumn{1}{c}{-1,712} \\ 
+    \% correct & \multicolumn{1}{c}{89} & \multicolumn{1}{c}{89} & \multicolumn{1}{c}{90} & \multicolumn{1}{c}{89} \\ 
+%% Akaike Inf. Crit. & \multicolumn{1}{c}{3,452.072} & \multicolumn{1}{c}{3,450.558} & \multicolumn{1}{c}{3,434.505} & \multicolumn{1}{c}{3,444.074} \\ 
+%% Bayesian Inf. Crit. &  &  &  & \multicolumn{1}{c}{3,512.592} \\ 
     \\ [-1.8ex] 
     \hline \\[-1.8ex] 
     & \multicolumn{4}{r}{\footnotesize $^{*}$p$<$.1; $^{**}$p$<$.05; $^{***}$p$<$.01 (p-values in parentheses)} \\ 
